# wm-tools

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yaml  release.yml  tests.yml
docs/: GUI_DESIGN.md  SCREENSHOT_PROTOCOL.md  USER_MANUAL.md
dso-parser/: Cargo.toml
dso-parser/src/: container.rs  lib.rs  screenshot.rs
dso3d12-parser/: Cargo.toml
dso3d12-parser/src/: lib.rs
flasher/: Cargo.toml
flasher/src/: capture.rs
gui/: Cargo.toml
gui/src/: app.rs  canvas.rs  flash.rs  logging.rs  main.rs  range_slider.rs  serial.rs  settings.rs
packaging/: README.md
packaging/common/: README-cli.txt  README-gui.txt
packaging/linux/: README.txt
packaging/macos/: Info.plist.template  README-unsigned.txt  create_app_bundle.sh
packaging/windows/: README.txt
src/: flash.rs
