[package]
name = "wm-tools"
version = "0.1.0"
edition = "2021"
description = "A tool for Winner Micro MCU (including DSO 3D12 oscilloscope firmware)"

[[bin]]
name = "flash"
path = "src/flash.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
colored = "2.0"
crc = "3.0"
indicatif = "0.17"
serialport = "4.7.0"
