[workspace]
resolver = "2"
members = [
    "flasher",
    "dso3d12-parser",
    "gui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
description = "Tools for ZeeWeii DSO3D12 oscilloscope and Winner Micro MCUs"
license = "MIT"
repository = "https://github.com/rssdev10/wm-tools"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
