[package]
name = "dso-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for ZeeWeii oscilloscope data formats (debug dumps and screenshot packets)"

[dependencies]
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ciborium = "0.2"

[dev-dependencies]
