[package]
name = "dso3d12-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for ZeeWeii DSO3D12 oscilloscope raw debug dumps"

[dependencies]
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
