[package]
name = "dso3d12-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GUI viewer for ZeeWeii DSO3D12 oscilloscope raw debug dumps"

[[bin]]
name = "dso3d12-gui"
path = "src/main.rs"

[dependencies]
dso-parser = { path = "../dso-parser" }
anyhow = { workspace = true }
log = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
iced = { version = "0.14", features = ["canvas", "tokio", "advanced"] }
iced_aw = { version = "0.14", features = ["context_menu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
dirs = "6.0"
csv = "1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serialport = "4.6"
tokio = { version = "1", features = ["sync", "time"] }
crc = "3.2"
open = "5"
